2001-12-26  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* lib/Drawable.cpp (DrawableCompositeImage): Read image
 	immediately if provided by filename, register with peristent
 	registry, and pass as perisistant image type.
	(DrawableCompositeImage): Support specifying Image in memory.
  	Passed as perisistant image type.

2001-12-24  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* lib/Color.cpp (operator std::string): Color string buffer was
 	one character too short!

2001-12-20  Bob Friesenhahn  <bfriesen@sun1107.ssd.usa.alcatel.com>

	* lib/TypeMetric.cpp (characterWidth): Eliminate method.
	(characterHeight): Eliminate method.
	(all remaining methods): Change return type to 'double'.  Fix
 	documentation in source files to reflect that units are in pixels
 	rather than points.

2001-11-22  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* lib/Image.cpp (Magick): Invoke DestroyMagick() to clean up
 	ImageMagick allocations.

	* lib/Magick++/Include.h (ImageType): Added some missing enums to
	Magick namespace.

2001-11-20  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* lib/Magick++/CoderInfo.h (CoderInfo): Syntax fix.
	ImageMagick bug #975.

	* lib/Image.cpp (draw): Delete ostrstream data when it is no
 	longer needed.  ImageMagick bug #988.

2001-11-07  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* lib/Image.cpp (pixelColor): Implementation didn't handle pixels
	indexes correctly.  Now it does.

2001-11-04  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* lib/Image.cpp (matteFloodfill): Coordinates are long values.
	(floodFillOpacity): New method to floodfill opacity across pixels
	matching color (within fuzz-factor) at point. Similar to
	matteFloodfill except that color is selected from starting point.

2001-10-29  Bob Friesenhahn  <bfriesen@sun1107.ssd.usa.alcatel.com>

	* lib/Image.cpp (strokeDashArray): Change to type double.
	(strokeDashOffset): Change to type double.

2001-10-24  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
