@@ -17,7 +17,9 @@ with Magick++ itself.
   <LI> Fixed possible stack corruption on some architectures when returning
     Color as a string.<BR>
   <LI> DrawableCompositeImage can be constructed based on an Image in memory
-    rather than just a filename.
+    rather than just a filename.<BR>
+  <LI> Added Drawable objects (DrawablePushPattern &amp; DrawablePopPattern)
+    for definining arbitrary named patterns to be used for stroke and fill.
 
 </UL>
 <p>
